# nikke-data-collector

./: .gitignore  LICENSE  README.md  README.zh-CN.md  pyproject.toml
scripts/: build.py  common.py  compile-ui.py  compile_translations.py  generate_translations.py
src/: about.py  admin_helper.py  character_extractor_app.py  config_manager.py  main.py  theme.py
src/collector/: __init__.py  battle_data_collector.py  character_matcher.py  cheer_processor.py  delay_manager.py  group_processor.py  image_detector.py  lineup_processor.py  models.py  obs_controller.py  profile_collector.py  tournament_64_player_collector.py  tournament_championship_collector.py  tournament_promotion_collector.py  ui_def.py  utils.py  window_capturer.py  window_info.py  window_manager.py  window_recorder.py
src/components/: image_input.py  path_selector.py
src/config/: __init__.py  config_manager.py
src/domain/: character.py  color.py  image_element.py  pixel_element.py
src/extractor/: app_config.py  character_extractor.py  character_extractor_ui.py  main.py  main_window.py  util.py
src/flow/: main.py
src/magnifier/: main.py
src/mixin/: json.py
src/new/: main.py
src/nikke_arena/: __init__.py  character_extractor.py  character_matcher.py  group_processor.py  image_detector.py  image_processor.py  lineup_processor.py  logging_config.py  models.py  mouse_control.py  obs_controller.py  tournament_64_player_collector.py  (+9 more)
tests/: conftest.py  test_battle_data_collector.py  test_character_extractor.py  test_character_matcher.py  test_cheer_capturer.py  test_group_processor.py  test_group_selection.py  test_image_detect.py  test_lineup_processor.py  test_mixin.py  test_obs_controller.py  test_profile_collector.py  test_round_buttons.py  test_tournament_64_player_collector.py  test_tournament_championship_tournament_collector.py  test_tournament_group_collector.py  test_tournament_promotion_collector.py  test_tournament_recorder.py  test_ui_def.py  test_window_capturer.py  test_window_manager.py  test_window_recorder.py  utils.py
(+94 files in other folders)
