[project]
authors = [
  {name = "iBakuman", email = "67883044+iBakuman@users.noreply.github.com"},
]
dependencies = [
  "mss>=9.0.1",
  "pywin32 (>=310,<311)",
  "psutil (>=7.0.0,<8.0.0)",
  "pyautogui (>=0.9.54,<0.10.0)",
  "numpy (>=2.2.4,<3.0.0)",
  "pyperclip (>=1.9.0,<2.0.0)",
  "opencv-python (>=4.11.0.86,<5.0.0.0)",
  "obsws-python (>=1.7.1,<2.0.0)",
  "imagehash (>=4.3.2,<5.0.0)",
  "diskcache (>=5.6.3,<6.0.0)",
  "dataclass-wizard (>=0.35.0,<0.36.0)",
  "tzdata (>=2025.2,<2026.0)",
  "pyside6 (>=6.9.0,<7.0.0)",
  "dependency-injector (>=4.46.0,<5.0.0)",
  "appdirs (>=1.4.4,<2.0.0)",
  "pyqtdarktheme (>=2.1.0,<3.0.0)",
]
description = "A tool for Nikke: Goddess of Victory data collection"
license = {text = "MIT"}
name = "nikke-data-collector"
readme = "README.md"
requires-python = ">=3.11,<3.12"
version = "1.0.2"

[tool.poetry]
authors = ["Your Name <your.email@example.com>"]
description = "A tool for Nikke: Goddess of Victory data collection"
name = "nikke-data-collector"
packages = [
    {include = "collector", from = "src"},
    {include = "repository", from = "src"},
    {include = "picker", from  = "src"},
    {include = "ui", from = "src"},
    {include = "tests"}, 
    {include = "scripts"},
]
include = [
    "src/ui/translations/*.qm",
    "src/ui/translations/*.ts"
]
readme = "README.md"
version = "0.1.0"

[tool.poetry.group.dev.dependencies]
keyboard = "^0.13.5"
nuitka = "^2.6.9"
pytest = "^8.3.5"
pytest-cov = "^6.1.1"
zstandard = "^0.23.0"
watchdog = "^6.0.0"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=2.0.0,<3.0.0"]

[tool.poetry.scripts]
build-debug = "scripts.build:build_debug"
build-release = "scripts.build:build_release"
compile-ui = "scripts.compile-ui:compile_ui"
watch-ui = "scripts.compile-ui:watch"
compile-translations = "scripts.compile_translations:compile_translations"
